8250951: [lworld] Escape analysis fails due to oop access to flat array